--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
+  color: #fff;
+  background-color: #000;
   font-family: Arial, Helvetica, sans-serif;
-  overflow-x: hidden;
 }
 
 .section-text {
@@ -83,7 +84,6 @@ body {
 
 .sub-principal-content {
   display: flex;
-  /* background-color: red; */
 }
 .sub-principal-desc {
   display: flex;
