--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
   color: #fff;
   background-color: #000;
   font-family: Arial, Helvetica, sans-serif;
+  list-style: none;
 }
 
 .section-text {
@@ -13,8 +14,6 @@ body {
 }
 .section-text.flex-2 {
   margin-top: 100px;
-}
-.section-text h1 {
   font-size: 33px;
   text-align: center;
 }
